[package]
name = "terra"
version = "0.1.0"
authors = ["ltzz <ltzz@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gio= "0.6.0"
reqwest = {version="0.10.8", features = ["blocking"]}
serde_json = "1.0.58"
serde = {version="1.0.116", features = ["derive"]}
dialog = "0.3.0"
toml = "0.5.6"
scraper = "0.12.0"

[dependencies.gtk]
version = "0.6.0"
features = ["v3_24"]
